--- a/404.md
+++ b/404.md
@@ -1,15 +1,21 @@
 ---
 title: Not found
 description: The content you are looking for is not here.
-permalink: "404"
+# permalink: '404'
+use_nav: false
+use_footer: false
 ---
 
-# Oops! Nothing found
+<div class="flex" style="margin:1rem auto 3rem auto">
+  <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
+  <div class="f" style="padding:0 1rem">
+    <h2 id="oops-nothing-found">Oops! Nothing found<a class="anchorjs-link " href="#oops-nothing-found" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h2>
+    <p>{{ page.description }}</p>
+  </div>
+</div>
 
-{{ page.description }}
+<div style="margin-top:3rem"></div>
 
 ---
-{: style="margin-top:8rem" }
 
-{% include back.html %}
-{% include gohome.html %}
+{% include nav_common.html %}
