--- a/404.md
+++ b/404.md
@@ -1,21 +1,17 @@
 ---
 title: Not found
 description: The content you are looking for is not here.
-# permalink: '404'
-use_nav: false
+permalink: '404'
+use_nav: true
 use_footer: false
 ---
-
 <div class="flex" style="margin:1rem auto 3rem auto">
   <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
   <div class="f" style="padding:0 1rem">
-    <h2 id="oops-nothing-found">Oops! Nothing found<a class="anchorjs-link " href="#oops-nothing-found" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h2>
+    <h2>Oops! Nothing found</h2>
     <p>{{ page.description }}</p>
   </div>
 </div>
-
 <div style="margin-top:3rem"></div>
-
----
-
+<hr/>
 {% include nav_common.html %}
