--- a/404.md
+++ b/404.md
@@ -1,9 +1,10 @@
 ---
+layout: dove
+
 title: Not found
 description: The content you are looking for is not here.
 permalink: '404'
-use_nav: true
-use_footer: false
+use_footer: edit_link_only
 ---
 <div class="flex" style="margin:1rem auto 3rem auto">
   <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
