--- a/404.md
+++ b/404.md
@@ -2,15 +2,15 @@
 layout: dove
 use_footer: edit_link_only
 
-title: Not found
-description: The content you are looking for is not here.
+title: Nothing found
+description: We can't find what you are looking for.
 permalink: '404'
 ---
 <div class="flex" style="margin:1rem auto 3rem auto">
   <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
   <div class="f" style="padding:0 1rem">
-    <h2>Oops! Nothing found</h2>
-    <p>{{ page.description }}</p>
+    <h2>Oops! {{ include.title | default: page.title }}</h2>
+    <p>{{ include.description | default: page.description }}</p>
   </div>
 </div>
 <div style="margin-top:3rem"></div>
