--- a/script/install
+++ b/script/install
@@ -4,8 +4,10 @@
 set -e
 
 npm install
-mv node_modules _sass
-ln -s _sass node_modules
+[ ! -d "_sass/node_modules" ] && {
+  mv node_modules _sass
+  ln -s _sass node_modules
+}
 
 # Normalize.css is distributed as CSS, which Sass dosen't like. Convert to scss.
 if test -e "_sass/normalize.css/normalize.css"; then
@@ -13,16 +15,15 @@ if test -e "_sass/normalize.css/normalize.css"; then
 fi
 
 # Add our own theme scss file for consistency of naming in `assets/style.scss`
-content=''
-# content='
-# @import "dove-support/index.scss";
-# @import "dove-base/index.scss";
-# @import "dove-utilities/index.scss";
-# @import "dove-layout/index.scss";
-# @import "dove-markdown/index.scss";
-# @import "rouge";
-# '
-echo "$content" >> _sass/dove.scss
+# @import "primer-support/index.scss";
+# @import "primer-base/index.scss";
+# @import "primer-utilities/index.scss";
+# @import "primer-layout/index.scss";
+# @import "primer-markdown/index.scss";
+content='
+@import "rouge";
+'
+echo "$content" > _sass/dove.scss
 
 # Create rouge stylesheet
 rougify style github > _sass/rouge.scss
