--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ title: Nothing found
 description: We can't find what you are looking for.
 permalink: '404'
 ---
-{% include 404.html %}
+{% include 404.md %}
