--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
 index: false
-layout: dove
+use_nav: false
 use_footer: edit_link_only
+permalink: '404'
 title: Nothing found
 description: We can't find what you are looking for.
-permalink: '404'
 ---
 {% include 404.md %}
