--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ index: false
 use_nav: false
 use_footer: edit_link_only
 permalink: '404'
-title: Nothing found
-description: We can't find what you are looking for.
+title: Not found
+description: Dove can't find what you are looking for.
 ---
-{% include 404.md %}
+{% include 404.md title="Oops! Nothing found" %}
