--- a/_includes/404.md
+++ b/_includes/404.md
@@ -1,7 +1,7 @@
 <div class="flex">
   <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
   <div class="f" style="padding:0 1rem">
-    <h2>Oops! {{ include.title | default: page.title }}</h2>
+    <h2>{{ include.title | default: page.title }}</h2>
     <p>{{ include.description | default: page.description }}</p>
   </div>
 </div>
