--- a/prime/md/404.md
+++ b/prime/md/404.md
@@ -1,10 +1,9 @@
 ---
 layout: prime
 index: false
-use_nav: false
+use_nav: true
 use_footer: edit_link_only
 title: Not found
 description: We can't find what you are looking for.
 ---
-{%- include dove/_nav_md.md sub="prime" %}
 {%- include 404.md title="Oops! Nothing found" %}
